--- a/LendingClubCaseStudy.ipynb
+++ b/LendingClubCaseStudy.ipynb
@@ -24,7 +24,7 @@
    "outputs": [],
    "source": [
     "#load data in dataframe\n",
-    "loan_master = pd.read_csv('loan.csv',low_memory=False)"
+    "loan_master = pd.read_csv('loan.csv')"
    ]
   },
   {
