--- a/LendingClubCaseStudy.ipynb
+++ b/LendingClubCaseStudy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,17 +19,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "#load data in dataframe\n",
-    "loan_master = pd.read_csv('loan.csv')"
+    "loan_master = pd.read_csv('loan.csv',low_memory=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
        "(39717, 111)"
       ]
      },
-     "execution_count": 277,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
     "\n",
     "#function to list colums with obj data types\n",
     "def info_obj(df):\n",
-    "    df.select_dtypes(include=['object']).info()"
+    "    df.select_dtypes(include=['object','int64']).info()"
    ]
   },
   {
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +106,7 @@
        "Length: 68, dtype: float64"
       ]
      },
-     "execution_count": 279,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": 23,
    "metadata": {
     "scrolled": true
    },
@@ -129,7 +129,7 @@
        "(39717, 57)"
       ]
      },
-     "execution_count": 280,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,7 +144,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "emp_title                      6.2\n",
+       "emp_length                     2.7\n",
+       "desc                          32.6\n",
+       "title                          0.0\n",
+       "mths_since_last_delinq        64.7\n",
+       "mths_since_last_record        93.0\n",
+       "revol_util                     0.1\n",
+       "last_pymnt_d                   0.2\n",
+       "next_pymnt_d                  97.1\n",
+       "last_credit_pull_d             0.0\n",
+       "collections_12_mths_ex_med     0.1\n",
+       "chargeoff_within_12_mths       0.1\n",
+       "pub_rec_bankruptcies           1.8\n",
+       "tax_liens                      0.1\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "check_null(loan_master)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,11 +225,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 33,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "\"['desc'] not found in axis\"",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-33-39ee0ba24233>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m#Drop desc column\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mloan_master\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdrop\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'desc'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0maxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0minplace\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\pandas\\core\\frame.py\u001b[0m in \u001b[0;36mdrop\u001b[1;34m(self, labels, axis, index, columns, level, inplace, errors)\u001b[0m\n\u001b[0;32m   3988\u001b[0m                 \u001b[0mweight\u001b[0m  \u001b[1;36m1.0\u001b[0m     \u001b[1;36m0.8\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3989\u001b[0m         \"\"\"\n\u001b[1;32m-> 3990\u001b[1;33m         return super().drop(\n\u001b[0m\u001b[0;32m   3991\u001b[0m             \u001b[0mlabels\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mlabels\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3992\u001b[0m             \u001b[0maxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0maxis\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\pandas\\core\\generic.py\u001b[0m in \u001b[0;36mdrop\u001b[1;34m(self, labels, axis, index, columns, level, inplace, errors)\u001b[0m\n\u001b[0;32m   3934\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlabels\u001b[0m \u001b[1;32min\u001b[0m \u001b[0maxes\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mitems\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3935\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mlabels\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 3936\u001b[1;33m                 \u001b[0mobj\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mobj\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_drop_axis\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlabels\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlevel\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mlevel\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0merrors\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0merrors\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   3937\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3938\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0minplace\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\pandas\\core\\generic.py\u001b[0m in \u001b[0;36m_drop_axis\u001b[1;34m(self, labels, axis, level, errors)\u001b[0m\n\u001b[0;32m   3968\u001b[0m                 \u001b[0mnew_axis\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdrop\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlabels\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlevel\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mlevel\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0merrors\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0merrors\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3969\u001b[0m             \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 3970\u001b[1;33m                 \u001b[0mnew_axis\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdrop\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlabels\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0merrors\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0merrors\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   3971\u001b[0m             \u001b[0mresult\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreindex\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m**\u001b[0m\u001b[1;33m{\u001b[0m\u001b[0maxis_name\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mnew_axis\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3972\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\pandas\\core\\indexes\\base.py\u001b[0m in \u001b[0;36mdrop\u001b[1;34m(self, labels, errors)\u001b[0m\n\u001b[0;32m   5016\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mmask\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0many\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   5017\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0merrors\u001b[0m \u001b[1;33m!=\u001b[0m \u001b[1;34m\"ignore\"\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 5018\u001b[1;33m                 \u001b[1;32mraise\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf\"{labels[mask]} not found in axis\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   5019\u001b[0m             \u001b[0mindexer\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mindexer\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m~\u001b[0m\u001b[0mmask\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   5020\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdelete\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mindexer\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mKeyError\u001b[0m: \"['desc'] not found in axis\""
+     ]
+    }
+   ],
    "source": [
     "#Drop desc column\n",
     "loan_master.drop(['desc'],axis=1, inplace=True)"
@@ -208,7 +258,8 @@
    "outputs": [],
    "source": [
     "#Drop title column\n",
-    "loan_master.drop(['title'],axis=1, inplace=True)"
+    "#loan_master.drop(['title'],axis=1, inplace=True)\n",
+    "#chcek for analysis"
    ]
   },
   {
@@ -233,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 36,
    "metadata": {
     "scrolled": true
    },
@@ -263,6 +314,7 @@
      "data": {
       "text/plain": [
        "emp_title                      3.7\n",
+       "title                          0.0\n",
        "mths_since_last_delinq        64.6\n",
        "revol_util                     0.1\n",
        "last_pymnt_d                   0.2\n",
@@ -273,7 +325,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 292,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1157,33 +1209,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "loan_status\n",
-       "Charged Off     66131375\n",
-       "Current         18793700\n",
-       "Fully Paid     349879250\n",
-       "Name: funded_amnt, dtype: int64"
+       "Fully Paid     32144\n",
+       "Charged Off     5398\n",
+       "Current         1098\n",
+       "Name: loan_status, dtype: int64"
       ]
      },
-     "execution_count": 260,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "loan_master['funded_amnt'].sum()"
+    "loan_master['loan_status'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "38640"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "loan_master['funded_amnt'].count()"
    ]
   },
   {
